Reimplement XMLSimpleReader under an ifdef in SVGParser to read white-space only nodes.

BUG:513085